--- a/.github/workflows/check-wechat-version.yml
+++ b/.github/workflows/check-wechat-version.yml
@@ -1,7 +1,7 @@
 name: Wechat Dest Version
 on:
   schedule:
-    - cron: '0 */4 * * *'
+    - cron: '0 * * * *'
 
   workflow_dispatch:
     inputs:
